--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -67,7 +67,7 @@
             <ion-label>Ver Usuarios</ion-label>
           </ion-item>
 
-          <ion-item *ngIf="user?.tipo_usuario === 'cliente'" [routerLink]="['/homeCliente']" (click)="selectOption('homeCliente')">
+          <ion-item *ngIf="user?.tipo_usuario === 'cliente' || user?.tipo_usuario === 'proveedor'" [routerLink]="['/homeCliente']" (click)="selectOption('homeCliente')">
             <ion-icon name="search-outline" slot="start"></ion-icon>
             <ion-label>Buscar Servicio</ion-label>
           </ion-item>
