--- a/src/app/components/home-cliente/home-cliente.component.html
+++ b/src/app/components/home-cliente/home-cliente.component.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar class="custom-toolbar">
-    <ion-buttons slot="start">
+    <!-- <ion-buttons slot="start">
       <ion-back-button defaultHref="/" style="color: #FFCF00;"></ion-back-button>
-    </ion-buttons>
+    </ion-buttons> -->
     <ion-title class="ion-text-center custom-title">Buscar Servicios</ion-title>
     <ion-buttons slot="end">
       <ion-button color="danger" (click)="goToProfile()">
