--- a/src/app/components/home-cliente/home-cliente.component.html
+++ b/src/app/components/home-cliente/home-cliente.component.html
@@ -74,6 +74,34 @@
   </ion-card>
 
   <ion-list *ngIf="pagedServices.length > 0; else noServices">
+
+
+
+    <!-- Card especial para usuario verificado -->
+<ion-card class="service-card verified-card">
+  <ion-card-header color="primary" class="verified-header">
+    <div class="header-content">
+      <span  style="color: #FFCF00; ;">Nombre Servicio</span>
+      <ion-icon name="checkmark-circle-outline"></ion-icon>
+    </div>
+  </ion-card-header>
+  <ion-card-content class="custom-card-content">
+    <div class="image-container">
+      <ion-avatar>
+        <img [src]="" />
+      </ion-avatar>
+    </div>
+    <div class="details-container">
+
+      <p class="service-price">1999</p>
+      <p class="service-info">hola</p>
+      <p class="service-description">hola</p>
+    </div>
+  </ion-card-content>
+</ion-card>
+
+
+
     <ng-container *ngFor="let page of pagedServices[currentPage]">
       <ion-card class="service-card" (click)="goToService(page.id)">
         <ion-card-content class="custom-card-content">
