--- a/src/app/components/verservices/verservices.component.html
+++ b/src/app/components/verservices/verservices.component.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar class="custom-toolbar">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/" style="color: #FFCF00;"></ion-back-button>
+      <ion-menu-button autoHide="false" style="color: #FFCF00;"></ion-menu-button>
     </ion-buttons>
     <ion-title class="ion-text-center custom-title">Ver Servicios</ion-title>
     <ion-buttons slot="end">
       <ion-button color="danger" (click)="logout()">
-        <ion-icon name="log-out-outline" class="custom-icon"></ion-icon>
+        <ion-icon name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
