--- a/src/app/components/subasta/subasta.component.html
+++ b/src/app/components/subasta/subasta.component.html
@@ -29,7 +29,7 @@
         </ion-item>
         <ion-item>
           <ion-label>Tiempo Restante:</ion-label>
-          <p>{{ getRemainingTime(auction.startTime, auction.duration) }}</p>
+          <p>{{ getRemainingTime(auction.endTime, auction.duration) }}</p>
         </ion-item>
         <ion-item>
           <ion-label>Tu Puja:</ion-label>
