--- a/src/app/components/subasta/subasta.component.scss
+++ b/src/app/components/subasta/subasta.component.scss
@@ -80,3 +80,9 @@ ion-button:hover {
   border-radius: 50%;
   overflow: hidden;
 }
+
+
+.winning-user {
+  background-color: #20e44d; /* Verde claro */
+  border: 1px solid #c3e6cb; /* Borde verde */
+}
