--- a/src/app/components/crear-subasta/crear-subasta.component.scss
+++ b/src/app/components/crear-subasta/crear-subasta.component.scss
@@ -81,3 +81,32 @@ ion-button:hover {
   border-radius: 50%;
   overflow: hidden;
 }
+
+
+.custom-modal {
+  position: fixed;  /* Fija el modal en la pantalla */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);  /* Fondo oscuro semitransparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;  /* Asegúrate de que esté por encima de otros elementos */
+}
+
+.custom-modal-content {
+  background-color: transparent;  /* Color del contenido del modal */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 500px;
+  width: 100%;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
